btc-arbitrage/logs/monitor_20260202_020006.log
  File "/workspace/btc-arbitrage/scripts/continuous_monitor.py", line 150
    f"{arbitrage_signal if arbitrage_signal else ''}")
                                                     ^
SyntaxError: f-string: single '}' is not allowed
